# soguiexamples

./: .gitattributes  .hgignore  AUTHORS  BUGS.txt  CMakeLists.txt  ChangeLog.sh  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  appveyor.yml  autogen.sh  bootstrap  config.h.in  configure  configure.ac  configure.in  oivxt-config
CMake/: .hgignore  Confugure.cmake  coinFeatureTest.cmake  coinTest.cmake  coinTestExaminerRenderArea.cxx  coinTestExaminerRenderArea.cxx.in  coinTestExaminerViewer_setfullscreen.cxx  coinTestExaminerViewer_setfullscreen.cxx.in  glGL.cxx  (+22 more)
actions/: CMakeLists.txt  Makefile.am  Makefile.in  intersection.cpp.in  ivcopy.cpp  matrixtransform.cpp  raypick.cpp.in  search.cpp.in  tesselate.cpp
annex/: CMakeLists.txt  Makefile.am  Makefile.in  hardcopy.cpp.in  rawhardcopy.cpp
coin-competitions/: CMakeLists.txt  Makefile.am  Makefile.in  README.txt  TextureWriter.cpp  TextureWriter.h  bitmapfont8x12.h  coinlogo.h  simlogo.h  strutils.cpp  strutils.h
coin-competitions/SIM-20010803/: CMakeLists.txt  Makefile.am  Makefile.in  chart.cpp.in  envq_raw  envq_raw.h  info.txt  plasmafun.cpp.in  star_raw.h  stars.cpp.in
coin-competitions/SIM-20010824/: CMakeLists.txt  Makefile.am  Makefile.in  envq_raw.h  info.txt  plasmaball.cpp.in  smiley.cpp.in  star_raw.h  stars2.cpp.in  styx.cpp.in
coin-competitions/SIM-20010914/: CMakeLists.txt  Makefile.am  Makefile.in  MooExecutive.cpp  MooExecutive.h  MooList.cpp  MooList.h  MooOut.cpp  MooOut.h  MooString.cpp  MooString.h  MooTokenizer.cpp  MooTokenizer.h  Moolah.cpp.in  calculator.cpp.in  coinhistory.cpp.in  font.h  info.txt  kaos.cpp.in  rec.cpp.in
coin-competitions/SIM-20011005/: Board.cpp  Board.h  CMakeLists.txt  GameLogic.cpp  GameLogic.h  Makefile.am  Makefile.in  Minimax.cpp  Minimax.h  TextureWriter.cpp  TextureWriter.h  bitmapfont8x12.h  cubes.cpp.in  lorenz.cpp.in  nurbscurve.cpp.in  star.h
coin-competitions/SIM-20011026/: README
coin-competitions/SIM-20011116/: 25bc5bb.cpp.in  CMakeLists.txt  Makefile.am  Makefile.in  README-foo.txt  foo.cpp.in  shaker.cpp.in
coin-competitions/SIM-20020118/: CMakeLists.txt  Makefile.am  Makefile.in  blocks.cpp.in
coin-competitions/SIM-20020208/: typeomatic.cpp.in
coin-competitions/SIM-20020503/: CMakeLists.txt  Makefile.am  Makefile.in  ballinthehoop.cpp.in  flow.cpp.in  strutils.cpp  strutils.h  typeomatic.cpp.in
components/: CMakeLists.txt  Makefile.am  Makefile.in  Makefile.in.diff  README  SoGuiSnapshotViewer.cpp.in  SoGuiSnapshotViewer.h.in  backgroundimg.cpp.in  computils.cpp.in  computils.h.in  customviewer.cpp.in  diff-header  directionallighteditor.cpp.in  examinerviewer.cpp.in  flyviewer.cpp.in  grapheditor.cpp.in  lightsliderset.cpp.in  materialeditor.cpp.in  materiallist.cpp.in  materiallist2.cpp.in  materialsliderset.cpp.in  materialsliderset2.cpp.in  multifileviewer.cpp.in  overlay.cpp.in  planeviewer.cpp.in  printdialog.cpp.in  renderarea.cpp.in  roster.cpp.in  simpleexviewer.cpp.in  simplerenderarea.cpp.in  snapshotviewer.cpp.in  spaceballdemo.cpp.in  subfullviewer.cpp.in  subviewer.cpp.in  transformsliderset.cpp.in  walkviewer.cpp.in
draggers/: CMakeLists.txt  Makefile.am  Makefile.in  dragpoint.cpp.in  jackdragger.cpp.in  translate1.cpp.in  translate2.cpp.in
engines/: CMakeLists.txt  ComputeXfBoundingBox.cpp  ComputeXfBoundingBox.h  Makefile.am  Makefile.in  calculator.cpp.in  computebbox.cpp.in  computexfbbox.cpp.in
eyecandy/: CMakeLists.txt  Makefile.am  Makefile.in  README  blob.cpp.in  juliaanim.cpp.in  mandelzoom.cpp.in  moirepatterns.cpp.in  simbuoy.cpp.in  sky10a.h  sky10b.h  stone42a.h  stone42b.h  toonshader.cpp.in
manipulators/: CMakeLists.txt  Makefile.am  Makefile.in  pointlightmanip.cpp.in  tabboxmanip.cpp.in
nodekits/: CMakeLists.txt  Makefile.am  Makefile.in  ShapeScale.cpp  ShapeScale.h  WaveSurfaceKit.cpp  WaveSurfaceKit.h  scalemarker.cpp.in  wavekitdemo.cpp.in
nodes/: CMakeLists.txt  Makefile.am  Makefile.in  atmospheric.cpp.in  bigimage.cpp.in  blinker.cpp.in  bumpmap.cpp.in  camera.cpp.in  clipplane.cpp.in  complexity.cpp.in  directionallight.cpp.in  drawstyle.cpp.in  environment.cpp.in  extselection.cpp.in  faceset.cpp.in  facesetindexed.cpp.in  image.cpp.in  levelofdetail.cpp.in  lights.cpp.in  markerset.cpp.in  material.cpp.in  nurbssurface.cpp.in  pointlight.cpp.in  pointset.cpp.in  quadmesh.cpp.in  rotation.cpp.in  rotor.cpp.in  scale.cpp.in  scenetexture.cpp.in  selection.cpp.in  shuttle.cpp.in  slideshow.cpp.in  sphere.cpp.in  spherecolor.cpp.in  spotlight.cpp.in  text2.cpp.in  text3.cpp.in  texture.cpp.in  texture3.cpp.in  textureunit.cpp.in  (+3 more)
sensors/: CMakeLists.txt  Makefile.am  Makefile.in  timersensor.cpp.in
sound/: CMakeLists.txt  Makefile.am  Makefile.in  README  audiocallback.cpp.in  distance_attenuation.iv  head.iv  interactive.cpp.in  manysources.cpp.in  remote_listener.iv
sound/clips/: README
volumerendering/: CMakeLists.txt  Makefile.am  Makefile.in  OpaqueChair-iv.h  OpaqueChair.cpp  OpaqueChair.h  OpaqueChair.iv  OrthoSliceHandler.cpp  OrthoSliceHandler.h  SoOrthoSlice.ui  SoOrthoSlice_ctrl.ui  SoTransferFunction.ui  SoTransferFunction_ctrl.ui  SoVolumeRender.ui  SoVolumeRender_ctrl.ui  TransferFunctionHandler.cpp  TransferFunctionHandler.h  VolumeRenderHandler.cpp  VolumeRenderHandler.h  chair.cpp  changingdataset.cpp.in  examine.cpp.in  fencediagram.cpp  orthoslicer.cpp.in  raypick.cpp.in  readvol.cpp.in  rgbload.cpp.in  simple8bit.cpp.in  utility.cpp  utility.h  voleonexplore.cpp  volumefencediagram.cpp
volumerendering/Cute/: BUGS.txt  CMakeLists.txt  Gradient.cpp  Gradient.h  GradientDialog.cpp  Makefile.am  Makefile.in  SoQtColorTableEditor.h  SoQtGradientDialog.h
volumerendering/Cute/curvep/: ColorCurve.cpp  ColorCurve.h  ColorTableEditor.cpp  CurveView.cpp  CurveView.h  SbGuiCubicSpline.cpp  SbGuiCubicSpline.h  SoQtColorTableEditorP.h
volumerendering/Cute/gradientp/: GradientView.cpp  GradientView.h  ImageItem.cpp  ImageItem.h  SoQtGradientDialogP.h  TickMark.cpp  TickMark.h
volumerendering/Cute/gradientp/gradients/: test1.grad  test2.grad  test3.grad
(+24 files in other folders)
